# CrewAI_Flows

./: README.md
1_Jira_Agent_Forrester_Demo/: README.md  pyproject.toml
1_Jira_Agent_Forrester_Demo/src/jira_forrester_agent/: crew.py  main.py
1_Jira_Agent_Forrester_Demo/src/jira_forrester_agent/config/: agents.yaml  tasks.yaml
1_Jira_Agent_Forrester_Demo/src/jira_forrester_agent/tools/: __init__.py  custom_tool.py
2_End2End_Jira_Agent_Flow/complete_jira_flow/: README.md  pyproject.toml
2_End2End_Jira_Agent_Flow/complete_jira_flow/src/complete_jira_flow/: crew.py  fetch_agent_prompts.py  main.py  trace_test.ipynb
2_End2End_Jira_Agent_Flow/complete_jira_flow/src/complete_jira_flow/config/: agents.yaml  config.json
2_End2End_Jira_Agent_Flow/logs/: jira_agent_user_2026-01-08.json  jira_agent_user_2026-01-09.json  jira_agent_user_2026-01-12.json
3_Automated_CrewAI_Crew_Creation/automated_crew/: README.md  end_user_interaction.ipynb  pyproject.toml
3_Automated_CrewAI_Crew_Creation/automated_crew/prompts/: create_agent_prompts.py  create_task_prompts.py
3_Automated_CrewAI_Crew_Creation/automated_crew/src/automated_crew/: crew.py  main.py
3_Automated_CrewAI_Crew_Creation/automated_crew/src/automated_crew/config/: agents.yaml  tasks.yaml
Campaign_Planning_Agent_V2/: README.md  pyproject.toml
Campaign_Planning_Agent_V2/src/campaign_planner/: crew.py  main.py
Campaign_Planning_Agent_V2/src/campaign_planner/config/: agents.yaml  tasks.yaml
Campaign_Planning_Agent_V2/src/campaign_planner/output/: HOLI_CELEBRATION_Email_2026-01-12.md  Hiring_event_Facebook_2026-01-12.md  holi_celebration_Twitter_2026-01-12.md  my_birthday_celebration_WhatsApp_2026-01-12.md
Campaign_Planning_Agent_V2/src/campaign_planner/requirements/: campaign_requirements.yaml
Google Calender Reading Agent/: README.md  pyproject.toml
Google Calender Reading Agent/src/google_calendar_analytics_assistant/: crew.py  main.py
Google Calender Reading Agent/src/google_calendar_analytics_assistant/config/: agents.yaml  tasks.yaml
Google Calender Reading Agent/src/google_calendar_analytics_assistant/tools/: google_calendar_events_by_attendee.py  google_calendar_events_by_attendee_oauth.py  google_calendar_oauth_tool.py
Jira_All_Task_Agent/: .env  STEPS_TAKEN.txt  chat_with_jira.py  interactive_jira_agent.py  requirements.txt  streamlit_app.py
Jira_All_Task_Agent/jira_read_agent/: README.md  pyproject.toml  report.md
Jira_All_Task_Agent/jira_read_agent/src/jira_read_agent/: crew.py  main.py
Jira_All_Task_Agent/jira_read_agent/src/jira_read_agent/config/: agents.yaml  tasks.yaml
Jira_All_Task_Agent/jira_read_agent/src/jira_read_agent/tools/: cached_ticket_tools.py  custom_jira_tool.py  jira_create_tool.py  jira_update_tool.py  slack_tool.py  ticket_cache_manager.py
Jira_All_Task_Agent/ticket_cache/: 356_10_2025-11-19.json  356_10_2025-11-20.json  356_20_2025-11-26.json  356_30_2025-11-19.json  356_30_2025-11-20.json  356_30_2025-11-21.json
ServiceNow Ticket Reading Agent/: README.md  pyproject.toml
ServiceNow Ticket Reading Agent/src/servicenow_filtered_ticket_search/: crew.py  main.py
ServiceNow Ticket Reading Agent/src/servicenow_filtered_ticket_search/config/: agents.yaml  tasks.yaml
ServiceNow Ticket Reading Agent/src/servicenow_filtered_ticket_search/tools/: servicenow_all_tickets_dynamic_days_tool.py  servicenow_connection_tool.py  servicenow_data_formatter.py  servicenow_filtered_query.py
