[project]
name = "campaign_planner"
version = "0.1.0"
description = "campaign_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.7.0",
    "litellm>=1.75.3",
]

[project.scripts]
campaign_planner = "campaign_planner.main:run"
run_crew = "campaign_planner.main:run"
train = "campaign_planner.main:train"
replay = "campaign_planner.main:replay"
test = "campaign_planner.main:test"
run_with_trigger = "campaign_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
