[project]
name = "servicenow_filtered_ticket_search"
version = "0.1.0"
description = "servicenow_filtered_ticket_search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
servicenow_filtered_ticket_search = "servicenow_filtered_ticket_search.main:run"
run_crew = "servicenow_filtered_ticket_search.main:run"
train = "servicenow_filtered_ticket_search.main:train"
replay = "servicenow_filtered_ticket_search.main:replay"
test = "servicenow_filtered_ticket_search.main:test"
run_with_trigger = "servicenow_filtered_ticket_search.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
