[project]
name = "complete_jira_flow"
version = "0.1.0"
description = "complete_jira_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.7.2",
]

[project.scripts]
complete_jira_flow = "complete_jira_flow.main:run"
run_crew = "complete_jira_flow.main:run"
train = "complete_jira_flow.main:train"
replay = "complete_jira_flow.main:replay"
test = "complete_jira_flow.main:test"
run_with_trigger = "complete_jira_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
