[project]
name = "jira_read_agent"
version = "0.1.0"
description = "jira_read_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.5.0",
]

[project.scripts]
jira_read_agent = "jira_read_agent.main:run"
run_crew = "jira_read_agent.main:run"
train = "jira_read_agent.main:train"
replay = "jira_read_agent.main:replay"
test = "jira_read_agent.main:test"
run_with_trigger = "jira_read_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
